--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: test_deploy_production
-  username: test_deploy
+  database: shop_s
+  username: deployer
   password: <%= ENV['TEST_DEPLOY_DATABASE_PASSWORD'] %>
