--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ yarn-debug.log*
 /config/database.production.yml
 /config/secrets.yml
 /config/secrets.production.yml
+/config/database.yml
+/config/database.production.yml
+/config/secrets.yml
+/config/secrets.production.yml
