--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -1,2 +1,3 @@
 secret_key_base: <%= Rails.application.credentials.secret_key_base %>
 secret_key_base: <%= Rails.application.credentials.secret_key_base %>
+secret_key_base: <%= Rails.application.credentials.secret_key_base %>
